@startuml

title __GESTORECATALOGO's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.AdminCastView {
          - addCastButton : Button
          - grid : Grid<Cast>
          + AdminCastView()
          - addCast()
          - closeEditor()
          - configureGrid()
          - deleteCast()
          - editCast()
          - saveCast()
          - updateList()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.AdminFilmView {
          - addFilmButton : Button
          - filterText : TextField
          - generiAggiunti : Boolean
          - grid : Grid<Film>
          - newFilm : Boolean
          - ruoliAggiunti : Collection<Ruolo>
          + AdminFilmView()
          - addFilm()
          - closeEditor()
          - configureFilter()
          - configureGrid()
          - deleteFilm()
          - editFilm()
          - saveFilm()
          - updateList()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.AdminPuntataView {
          - addPuntataButton : Button
          - filterText : TextField
          - grid : Grid<Puntata>
          - newPuntata : Boolean
          + AdminPuntataView()
          - addPuntata()
          - closeEditor()
          - configureFilter()
          - configureGrid()
          - deletePuntata()
          - editPuntata()
          - savePuntata()
          - updateList()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.AdminSerieTvView {
          - addSerieTvButton : Button
          - filterText : TextField
          - generiAggiunti : Boolean
          - grid : Grid<SerieTv>
          - newSerieTv : Boolean
          - ruoliAggiunti : Collection<Ruolo>
          + AdminSerieTvView()
          - addSerieTv()
          - closeEditor()
          - configureFilter()
          - configureGrid()
          - deleteSerieTv()
          - editSerieTv()
          - saveSerieTv()
          - updateList()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.CastForm {
          - binder : Binder<Cast>
          - cognome : TextField
          - elimina : Button
          - nome : TextField
          - reset : Button
          - save : Button
          + CastForm()
          + addListener()
          + setCast()
          - validateAndSave()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      abstract class com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.CastFormEvent {
          + CastFormEvent()
          + getCast()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.CloseEvent {
          + CloseEvent()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.DeleteEvent {
          + DeleteEvent()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.SaveEvent {
          + SaveEvent()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm {
          - annoUscita : IntegerField
          - attori : MultiselectComboBox<Cast>
          - binder : Binder<Media>
          - elimina : Button
          - generi : MultiselectComboBox<Genere>
          - linkLocandina : TextField
          - linkTrailer : TextField
          - registi : MultiselectComboBox<Cast>
          - reset : Button
          - ruoliSelezionati : ArrayList<Ruolo>
          - save : Button
          - sinossi : TextArea
          - titolo : TextField
          - tuttoIlCast : List<Cast>
          - voiceactors : MultiselectComboBox<Cast>
          + MediaForm()
          + addListener()
          + setMedia()
          - configureRuoli()
          - getRuoloArrayList()
          - prepareCastMultiSelect()
          - validateAndSave()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.AddGenereEvent {
          + AddGenereEvent()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.AddRuoloEvent {
          - ruoli : Collection<Ruolo>
          + AddRuoloEvent()
          + getRuoli()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.CloseEvent {
          + CloseEvent()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.DeleteEvent {
          + DeleteEvent()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      abstract class com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.MediaFormEvent {
          + MediaFormEvent()
          + getMedia()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.SaveEvent {
          + SaveEvent()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm {
          - binder : Binder<Puntata>
          - closeButton : Button
          - deleteButton : Button
          - numeroPuntata : IntegerField
          - numeroStagione : IntegerField
          - saveButton : Button
          - serieTv : ComboBox<SerieTv>
          - serieTvList : List<SerieTv>
          - sinossi : TextArea
          - titolo : TextField
          + PuntataForm()
          + addListener()
          + preparePuntate()
          + setPuntata()
          - validateAndSave()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.CloseEvent {
          + CloseEvent()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.DeleteEvent {
          + DeleteEvent()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      abstract class com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.PuntataFormEvent {
          - numeroStagione : Integer
          - serieTvId : Long
          + PuntataFormEvent()
          + getNumeroStagione()
          + getPuntata()
          + getSerieTvId()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.gestoreCatalogo {
      class com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.SaveEvent {
          + SaveEvent()
      }
    }
  }
  

  com.unisa.cinehub.views.user.gestoreCatalogo.AdminCastView -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminCastView o-- com.unisa.cinehub.data.entity.Cast : castSelezionato
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminCastView o-- com.unisa.cinehub.views.user.gestoreCatalogo.CastForm : form
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminCastView o-- com.unisa.cinehub.control.GestioneCatalogoControl : gestioneCatalogoControl
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminFilmView -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminFilmView o-- com.unisa.cinehub.control.CatalogoControl : catalogoControl
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminFilmView o-- com.unisa.cinehub.data.entity.Film : filmSelezionato
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminFilmView o-- com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm : form
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminFilmView o-- com.unisa.cinehub.control.GestioneCatalogoControl : gestioneCatalogoControl
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminPuntataView -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminPuntataView o-- com.unisa.cinehub.control.CatalogoControl : catalogoControl
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminPuntataView o-- com.unisa.cinehub.control.GestioneCatalogoControl : gestioneCatalogoControl
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminPuntataView o-- com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm : form
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminPuntataView o-- com.unisa.cinehub.data.entity.Puntata : puntataSelezionata
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminSerieTvView -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminSerieTvView o-- com.unisa.cinehub.control.CatalogoControl : catalogoControl
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminSerieTvView o-- com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm : form
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminSerieTvView o-- com.unisa.cinehub.control.GestioneCatalogoControl : gestioneCatalogoControl
  com.unisa.cinehub.views.user.gestoreCatalogo.AdminSerieTvView o-- com.unisa.cinehub.data.entity.SerieTv : serieTvSelezionato
  com.unisa.cinehub.views.user.gestoreCatalogo.CastForm -up-|> com.vaadin.flow.component.formlayout.FormLayout
  com.unisa.cinehub.views.user.gestoreCatalogo.CastForm o-- com.unisa.cinehub.data.entity.Cast : cast
  com.unisa.cinehub.views.user.gestoreCatalogo.CastForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.CastFormEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.CastForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.CloseEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.CastForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.DeleteEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.CastForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.SaveEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.CastFormEvent -up-|> com.vaadin.flow.component.ComponentEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.CastFormEvent o-- com.unisa.cinehub.data.entity.Cast : cast
  com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.CloseEvent -up-|> com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.CastFormEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.DeleteEvent -up-|> com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.CastFormEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.SaveEvent -up-|> com.unisa.cinehub.views.user.gestoreCatalogo.CastForm.CastFormEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm -up-|> com.vaadin.flow.component.formlayout.FormLayout
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm o-- com.unisa.cinehub.data.entity.Media : media
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.AddGenereEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.AddRuoloEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.CloseEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.DeleteEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.MediaFormEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.SaveEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.AddGenereEvent -up-|> com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.MediaFormEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.AddRuoloEvent -up-|> com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.MediaFormEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.CloseEvent -up-|> com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.MediaFormEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.DeleteEvent -up-|> com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.MediaFormEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.MediaFormEvent -up-|> com.vaadin.flow.component.ComponentEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.MediaFormEvent o-- com.unisa.cinehub.data.entity.Media : media
  com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.SaveEvent -up-|> com.unisa.cinehub.views.user.gestoreCatalogo.MediaForm.MediaFormEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm -up-|> com.vaadin.flow.component.formlayout.FormLayout
  com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm o-- com.unisa.cinehub.data.entity.Puntata : puntata
  com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.CloseEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.DeleteEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.PuntataFormEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm +-down- com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.SaveEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.CloseEvent -up-|> com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.PuntataFormEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.DeleteEvent -up-|> com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.PuntataFormEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.PuntataFormEvent -up-|> com.vaadin.flow.component.ComponentEvent
  com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.PuntataFormEvent o-- com.unisa.cinehub.data.entity.Puntata : puntata
  com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.SaveEvent -up-|> com.unisa.cinehub.views.user.gestoreCatalogo.PuntataForm.PuntataFormEvent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
